cleared overflow after figcaption on portfolio.html to fix the githubdiv overflow problem

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -202,6 +202,7 @@ textarea {
 
 .githubdiv {
     margin: 10px 0 10px 5px;
+    min-height: 36px;
 }
 .hiddenBox {
     visibility: hidden;
